examples/nginx/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:     
    # Annotations for Nginx ingress controller:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nginx.13.82.217.113.xip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-service
          servicePort: 80
